# mipt-python-2026

./: .gitignore  AGENTS.md  README.md  RESOURCES.md  pyproject.toml  requirements.txt
.opencode/agents/: seminar-design.md
module_1_python_basics/: README.md
module_1_python_basics/examples/: 01_basic_syntax.py  README.md
module_1_python_basics/exercises/: README.md
module_1_python_basics/homework/: README.md
module_2_oop_patterns/: README.md
module_2_oop_patterns/examples/: README.md  singleton.py
module_2_oop_patterns/homework/: README.md
module_3_web_development/: README.md
module_3_web_development/django_app/: README.md
module_3_web_development/fastapi_app/: README.md  main.py
module_3_web_development/homework/: README.md
module_4_data_analysis/: README.md
module_4_data_analysis/examples/: data_visualization_example.py
module_4_data_analysis/homework/: README.md
module_4_data_analysis/notebooks/: README.md
seminars/: __init__.py
seminars/seminar_01_intro_to_sql/: README.md
seminars/seminar_01_intro_to_sql/data/: university.sql
seminars/seminar_01_intro_to_sql/examples/: 01_create_tables.sql  02_insert_data.sql  03_basic_queries.sql
seminars/seminar_02_advanced_sql/: README.md
seminars/seminar_02_db_design/: README.md
seminars/seminar_03_oop_patterns/: README.md
seminars/seminar_04_web_fundamentals/: README.md
seminars/seminar_05_python_web_frameworks/: README.md
seminars/seminar_06_django_db_integration/: README.md
seminars/seminar_07_frontend_basics/: README.md
seminars/seminar_08_advanced_django/: README.md
seminars/seminar_08_testing_and_containerization/: README.md
seminars/seminar_09_fastapi_intro/: README.md
seminars/seminar_09_fastapi_rest/: README.md
seminars/seminar_10_fastapi_data_handling/: README.md  docker-compose.yml
seminars/seminar_11_fastapi_security_testing/: README.md
seminars/seminar_12_fastapi_containerization/: README.md
seminars/seminar_13_data_analysis_basics/: README.md
seminars/seminar_14_external_data_collection/: README.md
seminars/seminar_15_beautifulsoup_apis/: README.md
seminars/seminar_16_statistics/: README.md
seminars/seminar_17_data_visualization/: README.md
(+132 files in other folders)
